[tool.poetry]
name = "restore-mtime"
version = "0.1.0"
description = "Command line utility for resotration of modification time (mtime) of files from tar archive into filesystem if the content matches"
authors = ["eerorika <eerorika@gmail.com>"]
license = "MIT"
repository = "https://github.com/eerorika/restore-mtime"

[tool.poetry.dependencies]
python = "^2.7 || ^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
restore-mtime = 'entry:main'
